--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "mongoose": "^5.3.16",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "toastr": "^2.1.4"
   },
   "repository": {
     "type": "git",
